--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Top Melodic House &amp; Techno - Melodic House &amp; Techno playlist on
-      Spotify curated by professionals of the genre
+      Top Melodic House &amp; Techno 2020 - Melodic House &amp; Techno playlist
+      on Spotify curated by professionals of the genre
     </title>
     <meta
       property="og:url"
@@ -40,34 +40,7 @@
       rel="canonical"
       href="http://homesickmusicrec.com/topmelodichousetechno/index.html"
     />
-    <link
-      rel="shortcut icon"
-      href="https://static.tildacdn.com/tild3738-3132-4264-a332-666637303335/favicon_2.ico"
-      type="image/x-icon"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="https://static.tildacdn.com/tild6461-3935-4230-b738-643963646338/spot152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="https://static.tildacdn.com/tild6461-3935-4230-b738-643963646338/spot152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="https://static.tildacdn.com/tild6461-3935-4230-b738-643963646338/spot152.png"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="https://static.tildacdn.com/tild6461-3935-4230-b738-643963646338/spot152.png"
-    />
     <meta name="msapplication-TileColor" content="#000000" />
-    <meta
-      name="msapplication-TileImage"
-      content="https://static.tildacdn.com/tild3631-6166-4435-a238-343637656334/spot270.png"
-    />
 
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="all" />
     <link rel="stylesheet" href="css/blocks.css" type="text/css" media="all" />
@@ -78,9 +51,6 @@
       id="allrecords"
       class="t-records"
       data-hook="blocks-collection-content-node"
-      data-tilda-project-id="1184235"
-      data-tilda-page-id="5116715"
-      data-tilda-formskey="309af30cc8dab4604d0d11bbe53ed933"
     >
       <div
         id="rec92377621"
@@ -149,11 +119,9 @@
                           class="t338__title t-title t-title_xxs"
                           field="title"
                         >
-                          <div data-customstyle="yes">
-                            Top Melodic House &amp; Techno
-                          </div>
+                          Top Melodic House &amp; Techno 2020
                         </h1>
-                        <div
+                        <h2
                           class="t338__descr t-descr t-descr_xl"
                           field="descr"
                         >
@@ -163,7 +131,7 @@
                           CamelPhat, Da Fresh, Guy Gerber, Joris Voorn, Lane 8,
                           Rob Hes, Rodriguez Jr, Stephan Bodzin, Yotto, and many
                           more.
-                        </div>
+                        </h2>
                         <div class="t338__buttonwrapper">
                           <a
                             href="https://open.spotify.com/playlist/656gCnmxJO2SRyIiKTOwqE"
@@ -207,11 +175,11 @@
                   style="vertical-align: middle; width: 100%"
                 >
                   <div class="t823__main-wrapper">
-                    <h2 class="t823__title t-title t-title_xs" field="title">
+                    <h3 class="t823__title t-title t-title_xs" field="title">
                       <div style="color: #ffffff" data-customstyle="yes">
-                        Submit your track for Top Melodic House &amp; Techno<br />
+                        Submit your track<br />
                       </div>
-                    </h2>
+                    </h3>
                     <div class="t823__descr t-descr t-descr_md" field="descr">
                       <div style="color: #ffffff" data-customstyle="yes">
                         If you want to get your own track highlighted in our
@@ -248,7 +216,6 @@
                                 class="t-input js-tilda-rule t-input_bbonly"
                                 value=""
                                 placeholder="Your E-mail"
-                                data-tilda-rule="email"
                                 style="
                                   color: #f7f7f7;
                                   border: 1px solid #b3b3b3;
@@ -268,7 +235,6 @@
                                 class="t-input js-tilda-rule t-input_bbonly"
                                 value=""
                                 placeholder="Your Artist Name"
-                                data-tilda-rule="name"
                                 style="
                                   color: #f7f7f7;
                                   border: 1px solid #b3b3b3;
@@ -288,7 +254,6 @@
                                 class="t-input js-tilda-rule t-input_bbonly"
                                 value=""
                                 placeholder="Your Track Spotify Link"
-                                data-tilda-rule="url"
                                 style="
                                   color: #f7f7f7;
                                   border: 1px solid #b3b3b3;
@@ -370,9 +335,6 @@
                         class="t823__bgimg t-bgimg"
                         bgimgfield="img"
                         data-original="img/top-melodic-house-techno.jpg"
-                        style="
-                          background-image: url('img/top-melodic-house-techno.jpg');
-                        "
                       ></div>
                     </div>
                   </div>
