--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
           id="recorddiv92377621"
           bgimgfield="img"
           style="
-            height: 100vh;
+            height: 60vh;
             min-height: 400px;
+            max-height: 600px;
             background-image: url('img/background-landing.jpg');
           "
         >
@@ -76,16 +77,18 @@
             data-content-cover-height="60vh"
             data-content-cover-parallax=""
             style="
-              height: 100vh;
+              height: 60vh;
               min-height: 400px;
+              max-height: 600px;
               background-attachment: scroll;
             "
           ></div>
           <div
             class="t-cover__filter"
             style="
-              height: 100vh;
+              height: 60vh;
               min-height: 400px;
+              max-height: 600px;
               background-image: -moz-linear-gradient(
                 top,
                 rgba(0, 0, 0, 0.6),
@@ -120,8 +123,9 @@
                 <div
                   class="t-cover__wrapper t-valign_middle"
                   style="
-                    height: 100vh;
+                    height: 60vh;
                     min-height: 400px;
+                    max-height: 600px;
                     position: relative;
                     z-index: 1;
                   "
